accordian head alignment fixed

--- a/src/components/Services/AccordianItem.module.scss
+++ b/src/components/Services/AccordianItem.module.scss
@@ -123,10 +123,11 @@
 	gap: 15px;
 	justify-content: space-between;
 	width: 100%;
+	align-items: center;
 }
 
 .accordianIcon {
-	max-width: 80px;
+	max-width: 70px;
 	display: flex;
 	align-items: center;
 }
